; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/test/extr_test_archive_write_set_filter_option.c_test.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/test/extr_test_archive_write_set_filter_option.c_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }

@ARCHIVE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@ARCHIVE_FAILED = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"fubar\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"snafu\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"betcha\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.archive*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call %struct.archive* (...) @archive_write_new()
  store %struct.archive* %4, %struct.archive** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load %struct.archive*, %struct.archive** %3, align 8
  %9 = call i32 @archive_write_add_filter_gzip(%struct.archive* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.archive*, %struct.archive** %3, align 8
  %12 = load i32, i32* @ARCHIVE_OK, align 4
  %13 = call i32 @should(%struct.archive* %11, i32 %12, i8* null, i8* null, i8* null)
  %14 = load %struct.archive*, %struct.archive** %3, align 8
  %15 = load i32, i32* @ARCHIVE_OK, align 4
  %16 = call i32 @should(%struct.archive* %14, i32 %15, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %17 = load %struct.archive*, %struct.archive** %3, align 8
  %18 = load i32, i32* @ARCHIVE_FAILED, align 4
  %19 = call i32 @should(%struct.archive* %17, i32 %18, i8* null, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* null)
  %20 = load %struct.archive*, %struct.archive** %3, align 8
  %21 = load i32, i32* @ARCHIVE_FAILED, align 4
  %22 = call i32 @should(%struct.archive* %20, i32 %21, i8* null, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %23 = load %struct.archive*, %struct.archive** %3, align 8
  %24 = load i32, i32* @ARCHIVE_FAILED, align 4
  %25 = call i32 @should(%struct.archive* %23, i32 %24, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* null)
  %26 = load %struct.archive*, %struct.archive** %3, align 8
  %27 = load i32, i32* @ARCHIVE_FAILED, align 4
  %28 = call i32 @should(%struct.archive* %26, i32 %27, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %29 = load %struct.archive*, %struct.archive** %3, align 8
  %30 = call i32 @archive_write_free(%struct.archive* %29)
  ret void
}

declare dso_local %struct.archive* @archive_write_new(...) #1

declare dso_local i32 @archive_write_add_filter_gzip(%struct.archive*) #1

declare dso_local i32 @should(%struct.archive*, i32, i8*, i8*, i8*) #1

declare dso_local i32 @archive_write_free(%struct.archive*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
